--- a/app/src/main/res/layout/authorization_activity.xml
+++ b/app/src/main/res/layout/authorization_activity.xml
@@ -36,7 +36,7 @@
             android:hint="enter password"
             android:textColor="@color/white"
             android:textColorHint="@color/white"
-            android:textSize="14sp"></EditText>
+            android:textSize="16sp"></EditText>
     </LinearLayout>
 
     <LinearLayout
@@ -79,7 +79,7 @@
         android:layout_height="54dp"
         android:layout_marginTop="20dp"
         android:fontFamily="@font/main_font"
-        android:text="confirm"
+        android:text="Log In"
         app:layout_constraintTop_toBottomOf="@+id/password_layout" />
 
     <Button
