--- a/app/src/main/res/layout/profile_activity.xml
+++ b/app/src/main/res/layout/profile_activity.xml
@@ -7,6 +7,20 @@
     android:background="@color/black">
 
     <Button
+        android:id="@+id/log_out"
+        android:layout_width="match_parent"
+        android:layout_height="54dp"
+        android:layout_marginTop="70dp"
+        android:backgroundTint="@color/black"
+        android:fontFamily="@font/main_font"
+        android:onClick="viewWindow"
+        android:text="Log Out"
+        android:textColor="@color/white"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout6" />
+
+    <Button
         android:id="@+id/confirm"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
