change activity to fragment Authorization, Profile, AddSection, Registration

--- a/app/src/main/res/layout/create_task_activity.xml
+++ b/app/src/main/res/layout/create_task_activity.xml
@@ -56,8 +56,7 @@
         android:layout_height="60dp"
         android:layout_marginStart="20dp"
         android:orientation="horizontal"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout3">
+        app:layout_constraintStart_toStartOf="parent">
 
         <LinearLayout
             android:id="@+id/linearLayou20"
