--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_graph"
     app:startDestination="@id/mainFragment">
 
@@ -21,6 +22,29 @@
         android:label="ProfileFragment" />
     <activity
         android:id="@+id/addSectionActivity"
-        android:name="com.example.todo.AddSectionActivity"
+        android:name="com.example.todo.AddSectionFragment"
         android:label="AddSectionActivity" />
+    <fragment
+        android:id="@+id/registrationFragment2"
+        android:name="com.example.todo.RegistrationFragment"
+        android:label="RegistrationFragment" >
+        <action
+            android:id="@+id/action_registrationFragment2_to_mainFragment"
+            app:destination="@id/mainFragment" />
+        <action
+            android:id="@+id/action_registrationFragment2_to_authorizationFragment2"
+            app:destination="@id/authorizationFragment2" />
+    </fragment>
+    <fragment
+        android:id="@+id/authorizationFragment2"
+        android:name="com.example.todo.AuthorizationFragment"
+        android:label="authorization_fragment"
+        tools:layout="@layout/authorization_activity" >
+        <action
+            android:id="@+id/action_authorizationFragment2_to_mainFragment"
+            app:destination="@id/mainFragment" />
+        <action
+            android:id="@+id/action_authorizationFragment2_to_registrationFragment2"
+            app:destination="@id/registrationFragment2" />
+    </fragment>
 </navigation>
