--- a/app/src/main/res/layout/add_section_activity.xml
+++ b/app/src/main/res/layout/add_section_activity.xml
@@ -31,7 +31,7 @@
             android:ems="10"
             android:fontFamily="@font/main_font"
             android:inputType="textPersonName"
-            android:hint="enter name"
+            android:hint="Enter name"
             android:textColor="@color/white"
             android:textColorHint="@color/white"
             android:textSize="16sp" />
