--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/mainFragment"
-        android:name="com.example.todo.view.MainFragmentView"
+        android:name="com.example.todo.MainFragmentView"
         android:label="MainFragment" >
         <action
             android:id="@+id/action_mainFragment_to_profileFragment"
@@ -49,7 +49,7 @@
     </fragment>
     <fragment
         android:id="@+id/addSectionFragment"
-        android:name="com.example.todo.view.AddSectionFragmentView"
+        android:name="com.example.todo.AddSectionFragmentView"
         android:label="AddSectionFragment" >
         <action
             android:id="@+id/action_addSectionFragment_to_mainFragment"
