--- a/app/src/main/res/layout/section_item.xml
+++ b/app/src/main/res/layout/section_item.xml
@@ -31,4 +31,11 @@
             android:textColorHint="@color/white"
             android:textSize="20sp" />
 
+        <ImageView
+            android:id="@+id/editFolder"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            app:srcCompat="@drawable/baseline_edit_24" />
+
 </LinearLayout>
