--- a/app/src/main/res/layout/section_item.xml
+++ b/app/src/main/res/layout/section_item.xml
@@ -35,7 +35,9 @@
             android:id="@+id/editFolder"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:layout_weight="1"
+            android:layout_weight="0.4"
+            android:scaleY="0.5"
+            android:scaleX="0.5"
             app:srcCompat="@drawable/baseline_edit_24" />
 
 </LinearLayout>
