--- a/app/src/main/res/layout/authorization_activity.xml
+++ b/app/src/main/res/layout/authorization_activity.xml
@@ -94,12 +94,20 @@
         app:layout_constraintTop_toBottomOf="@+id/confirm"
         tools:layout_editor_absoluteX="-16dp" />
 
-    <TextView
-        android:id="@+id/Check"
+    <Button
+        android:id="@+id/forgot"
         android:layout_width="match_parent"
-        android:layout_height="65dp"
-        android:gravity="center"
-        app:layout_constraintBottom_toBottomOf="parent"></TextView>
+        android:layout_height="54dp"
+        android:layout_marginTop="40dp"
+        android:backgroundTint="@color/black"
+        android:fontFamily="@font/main_font"
+        android:onClick="viewWindow"
+        android:text="forgot password"
+        android:textSize="10dp"
+        android:textColor="@color/white"
+        app:layout_constraintTop_toBottomOf="@+id/register"
+        tools:layout_editor_absoluteX="-16dp" />
+
 
     <ImageView
         android:id="@+id/logo"
