--- a/app/src/main/res/layout/section_item.xml
+++ b/app/src/main/res/layout/section_item.xml
@@ -6,33 +6,69 @@
     android:layout_height="50dp"
     android:layout_marginBottom="10dp"
     android:background="@color/black"
-    android:orientation="horizontal"
+    android:orientation="vertical"
     android:id="@+id/rowLayout">
 
-
-
-
-
-
-        <ImageButton
-            android:id="@+id/butDone"
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:orientation="horizontal">
+        <TextView
+            android:id="@+id/textView11"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:scaleX="0.5"
-            android:scaleY="0.5"
-            android:backgroundTint="@color/black"
-            app:srcCompat="@drawable/unchecked" />
+            android:textColor="@color/white"
+            android:layout_marginLeft="10sp"
+            android:textSize="20sp"
+            android:gravity="center"
+            android:fontFamily="@font/main_font"
+            android:text="#" />
 
         <TextView
             android:id="@+id/name"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:fontFamily="@font/main_font"
             android:gravity="center|left"
             android:layout_weight="40"
+            android:layout_marginLeft="20dp"
             android:textColor="@color/white"
             android:textColorHint="@color/white"
             android:textSize="20sp" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/textView13"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_marginLeft="20dp"
+                    android:layout_weight="1"
+                    android:fontFamily="@font/main_font"
+                    android:gravity="center"
+                    android:text="Remind time:"
+                    android:textColor="@color/white"
+                    android:textColorHint="@color/white"
+                    android:textSize="12sp" />
+                <TextView
+                    android:id="@+id/remindTime"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_weight="40"
+                    android:layout_marginLeft="10dp"
+                    android:gravity="center|left"
+                    android:fontFamily="@font/main_font"
+                    android:textColor="@color/white"
+                    android:textColorHint="@color/white"
+                    android:textSize="12sp"/>
+        </LinearLayout>
+
 
 </LinearLayout>
